fixed add to cart on mobile

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -12,9 +12,7 @@
     height: 14rem;
 }
 
-.cardBtn .btn{
-    border-radius: 0 !important;
-}
+
 .cardBtn  {
     position: absolute;
     bottom: -50%;
